samples/_failures_safe/1761701499_dba692_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1455ebde.c: In function ‘main’:
./samples/SAFE/__tmp_1455ebde.c:123:5: error: expected declaration or statement at end of input
  123 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_1455ebde.c:123:5: error: expected declaration or statement at end of input
